// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <DateTime /> when isRelative is false and isDateOnly is false matches snapshot 1`] = `
<time
  class="DateTime TestDateTime"
  datetime="2018-10-20T20:00:00"
  title="Saturday, 20 October 2018, 8:00 pm"
>
  Saturday, 20 October 2018, 8:00 pm
</time>
`;

exports[`[presentation] <DateTime /> when isRelative is false and isDateOnly is true matches snapshot 1`] = `
<time
  class="DateTime TestDateTime"
  datetime="2018-10-20"
  title="Saturday, 20 October 2018"
>
  Saturday, 20 October 2018
</time>
`;

exports[`[presentation] <DateTime /> when isRelative is false and only time options are defined matches snapshot 1`] = `
<time
  class="DateTime TestDateTime"
  datetime="2018-10-20T20:00:00"
  title="8:00 pm"
>
  8:00 pm
</time>
`;

exports[`[presentation] <DateTime /> when isRelative is true and isDateOnly is true matches snapshot 1`] = `
<time
  class="DateTime TestDateTime"
  datetime="2018-10-20"
  title="Saturday, 20 October 2018"
>
  in 10 months
</time>
`;
